SERVER-8799: handle symbol BSON type as string in v8