src/mongo/scripting/engine_v8.cpp
@@ -1318,6 +1318,7 @@ namespace mongo {
                     log() << "warning: CodeWScope doesn't transfer to db.eval" << endl;
                 o->ForceSet(name, newFunction(f.codeWScopeCode()));
                 break;
+            case mongo::Symbol:
             case mongo::String:
                 o->ForceSet(name, v8::String::New(f.valuestr()));
                 break;
@@ -1519,6 +1520,7 @@ namespace mongo {
             if (!elem.codeWScopeObject().isEmpty())
                 log() << "warning: CodeWScope doesn't transfer to db.eval" << endl;
             return newFunction(elem.codeWScopeCode());
+        case mongo::Symbol:
         case mongo::String:
             return v8::String::New(elem.valuestr());
         case mongo::jstOID:
